# serp-filter-skill

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
coding/回溯/: 216_组合之和.py  216_组合之和_剪枝.py  77_组合_剪枝.py  77_组合问题.py
docs/superpowers/plans/: 2026-04-01-open-source-polish.md
examples/: blocklist-sites.csv  providers.static-json.toml  queries.txt  static-provider.json
meizhao/search-for-web/: PR.md  README.md
meizhao/search-for-web/config/: blocklist.example.toml  providers.example.toml  query-templates.txt
meizhao/search-for-web/docs/superpowers/plans/: 2026-04-09-ai-submit-sites-implementation-plan.md
meizhao/search-for-web/docs/superpowers/specs/: 2026-04-09-ai-submit-sites-design.md
meizhao/search-for-web/serp-filter-skill/: SKILL.md
meizhao/search-for-web/serp-filter-skill/agents/: openai.yaml
meizhao/search-for-web/serp-filter-skill/references/: provider-config.md
meizhao/search-for-web/src/serp_filter/: __init__.py  blocklist.py  cleaner.py  cli.py  domain_dates.py  domain_utils.py  models.py  pipeline.py  writers.py
meizhao/search-for-web/src/serp_filter/providers/: serpapi.py  static_json.py
meizhao/search-for-web/tests/: test_cleaner.py  test_cli.py  test_domain_dates.py  test_domain_utils.py  test_pipeline.py  test_serpapi_provider.py
serp-filter-skill/: SKILL.md
serp-filter-skill/agents/: openai.yaml
src/serp_filter/: __main__.py  cli.py  domain_dates.py  models.py  pipeline.py  writers.py
src/serp_filter/providers/: serpapi.py  static_json.py
tests/: test_blocklist_reader.py  test_domain_dates.py  test_pipeline.py  test_repository_assets.py
ur5_gazebo/: README.md
ur5_gazebo/src/universal_robot-noetic-devel/ur5_moveit_config/config/: cartesian_limits.yaml  joint_limits.yaml  joint_limits（复件）.yaml  kinematics.yaml  obstacles.yaml  ompl_planning.yaml
ur5_gazebo/src/universal_robot-noetic-devel/ur5_moveit_config/launch/: moveit.rviz  moveit_planning_execution.launch
ur5_gazebo/src/universal_robot-noetic-devel/ur_description/: package.xml
ur5_gazebo/src/universal_robot-noetic-devel/ur_description/cfg/: view_robot.rviz
ur5_gazebo/src/universal_robot-noetic-devel/ur_description/config/ur5/: physical_parameters.yaml
ur5_gazebo/src/universal_robot-noetic-devel/ur_gazebo/: CMakeLists.txt  pd.py
ur5_gazebo/src/universal_robot-noetic-devel/ur_gazebo/config/: ur5_controllers.yaml
ur5_gazebo/src/universal_robot-noetic-devel/ur_gazebo/launch/: ur5_bringup.launch
ur5_gazebo/src/universal_robot-noetic-devel/ur_gazebo/launch/inc/: load_ur.launch.xml  load_ur5.launch.xml  ur_control.launch.xml
ur5_gazebo/src/ur5_control_gui/: CMakeLists.txt  package.xml  setup.py
ur5_gazebo/src/ur5_control_gui/launch/: dashboard.launch
ur5_gazebo/src/ur5_control_gui/scripts/: ur5_control_node.py
ur5_gazebo/src/ur5_control_gui/src/ur5_control_gui/: __init__.py  controller.py  gui.py  kinematics.py
