[project]
name = "serp-filter-skill"
version = "0.1.0"
description = "Google SERP filtering skill with blocklist and domain enrichment."
requires-python = ">=3.11"
dependencies = [
  "openpyxl>=3.1.5,<4",
  "requests>=2.32.5,<3",
  "tldextract>=5.3.0,<6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.2,<9",
]

[project.scripts]
serp-filter = "serp_filter.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
