<?xml version="1.0"?>
<package format="2">
  <name>ur5_control_gui</name>
  <version>1.0.0</version>
  <description>Custom ROS GUI for UR5 control using PID and Computed Torque Control.</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>controller_manager_msgs</build_depend>
  <build_depend>moveit_commander</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>kdl_parser_py</build_depend>
  <build_depend>urdf_parser_py</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>trajectory_msgs</build_export_depend>
  <build_export_depend>control_msgs</build_export_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>controller_manager_msgs</build_export_depend>
  <build_export_depend>moveit_commander</build_export_depend>
  <build_export_depend>moveit_msgs</build_export_depend>
  <build_export_depend>kdl_parser_py</build_export_depend>
  <build_export_depend>urdf_parser_py</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>controller_manager_msgs</exec_depend>
  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>kdl_parser_py</exec_depend>
  <exec_depend>urdf_parser_py</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-tk</exec_depend>

  <export>
  </export>
</package>
